logs/eth_exercise/build.make.001.log.stderr
/home/weiminn/catkin_ws/src/eth_exercise/src/eth_exercise_node.cpp: In function ‘int main(int, char**)’:
/home/weiminn/catkin_ws/src/eth_exercise/src/eth_exercise_node.cpp:10:16: error: expected ‘;’ before ‘return’
   10 |     ros::spin()
      |                ^
      |                ;
   11 |     return 0
      |     ~~~~~~      
make[2]: *** [CMakeFiles/eth_exercise.dir/build.make:63: CMakeFiles/eth_exercise.dir/src/eth_exercise_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:167: CMakeFiles/eth_exercise.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:141: all] Error 2
